[package]
name = "pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
clap = { version = "3.1.12", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]