[package]
name = "ppfs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Pipe is a tool allowing you to easily create a fast file server."
homepage = "https://github.com/noctisatrae/pp"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "fileserver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
clap = { version = "3.1.12", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]